mysql_rs1.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: mysql
  labels:
    app: mysql_1 
spec:
  containers:
    - image: hshar/mysql:5.5
      name: mysql
      ports:
        - containerPort: 3306
          name: mysql
      volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-persistent-storage
      hostPath:
        path: /data
        type: DirectoryOrCreate
