php2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php2
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php2
      tier: backend
  template:
    metadata:
      labels:
        app: php2
        tier: backend
    spec:
      volumes:
      - name: code2
        persistentVolumeClaim:
          claimName: code2
      containers:
      - name: php2
        image: php:7-fpm
        volumeMounts:
        - name: code2
          mountPath: /code2
