mysql_deployment.yaml
# deploy the MySQL server container

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    "heptio.com/example": lamp
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        resources:
          requests:
            cpu: 1
            memory: 2Gi
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          subPath: data
          name: database
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: database

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    "heptio.com/example": lamp
spec:
  type: ClusterIP
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql
