mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    tier: database
spec:
  selector:
    app: mysql
    tier: database
  ports:
  - protocol: TCP
    port: 3306
  clusterIP: None
