nginx2_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  labels:
    tier: backend
spec:
  selector:
    app: nginx2
    tier: backend
  ports:
  - protocol: TCP
    port: 81
    targetPort: 80
#  externalIPs:
#  - 10.120.121.45
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
      tier: backend
  template:
    metadata:
      labels:
        app: nginx2
        tier: backend
    spec:
      volumes:
      - name: code2
        persistentVolumeClaim:
          claimName: code2
      - name: config
        configMap:
          name: nginx2-config
          items:
          - key: config
            path: site.conf
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: code2
          mountPath: /code2
        - name: config
          mountPath: /etc/nginx/conf.d
