nginx2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  labels:
    tier: backend
spec:
  selector:
    app: nginx2
    tier: backend
  ports:
  - protocol: TCP
    port: 81
    targetPort: 80
  externalIPs:
  - 10.120.121.45
