php2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php2
  labels:
    tier: backend
spec:
  selector:
    app: php2
    tier: backend
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9000
