ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
  - hosts:
    - my.test.com
    secretName: ingress-secret
  rules:
  - host: my.test.com
    http:
      paths:
      - path: /app1
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /app2
        backend:
          serviceName: nginx2
          servicePort: 80
